--- a/C++ primer/04.md
+++ b/C++ primer/04.md
@@ -1,1 +1,58 @@
+# 第四章
+  左值和右值，当一个对象被用作右值的时候，用的是对象的值(内容)/当对象被用作左值的时候，用的是对象的身份(在内存中的位置)。
+  
+  在除法运算中，C++11新标准规定商一律向0取整。
+  
+  逻辑与运算符和逻辑或运算符都是先求左侧运算对象的值再求右侧对象的值，当且仅当左侧运算对象无法确定表达式的结果时才会计算右侧运算对象的值，这种策略称之为短路求值。
+  
+  除非必须，否则不用递增递减运算符的后置版本。由于前置版本的递增运算符避免了不必要的工作，它把值加1后直接返回改变了的运算对象，与之相比，后置版本需要将原始值存储下来以便于返回这个未修改的内容，假如我们不需要修改前的值，那么后置版本的操作就是一种浪费。
+```C++
+*pbeg++等同于*(pbeg++)
+```
+```C++
+for(auto it=s.begin();it!=s.end() && !isspace(*it);++it)
+  *it=toupper(*it);
+  
+while(beg!=s.end() && !isspace(*beg))
+  *beg=toupper(*beg++);
+```
+  点运算符和箭头运算符都可用于访问成员，表达式ptr->mem等价于(* ptr).mem。
+  
+  条件运算符cond?expr1:expr2，可以嵌套使用。
+  
+  输出的条件运算符的优先级非常低，因此当一条长表达式中嵌套了条件运算子表达式时，通常需要在它两端加上括号。
+```C++
+cout<<((grade<60)?"fail":"pass"); //输出pass或者fail
+cout<<(grade<60)?"fail":"pass"; //输出1或者9
+cout<<grade<60)?"fail":"pass"; //error,试图比较cout和60
+```
+  位运算符，位与&，位或|，位异或(两个运算对象有且只有一个为1)。
+  
+  例子中有30个学生。unordered long在任何机器上至少有32位。因此，可以确保字节具有定义的值。标准定义unordered int保证能容纳16位。如果采用unordered int，则结果是未定义的。
+  
+  C++11新标准允许我们使用作用域运算符来获取类成员的大小，通常情况下只有通过类的对象才能访问到类的成员，但是sizeof运算符无须我们提供一个具体的对象，因为要想知道类成员的大小无须真的获取该成员。
+```C++
+sizeof p; //指针所占空间的大小
+sizeof *p; //p所指类型的空间大小
+```
+  显示转换，形式为cast-neame<type>(expression)，其中type是转换的目标类型而expression是要转换的值，cast-name是static_cast,dynamic_cast(后续介绍),const_cast,reinterpret_cast中的一种。
+  
+  static_cast，任何具有明确定义的类型转换，只要不包含底层const，都可以使用static_cast。
+```C++
+double slope=static_cast<double>(j)/i; //较大的算术类型赋值给较小的类型
 
+void* p=&d; //任何非常量对象的地址都能存入void*
+double* dp=static_cast<double*>(p); //将void*转换初始的指针类型
+```
+  const_cast，只能改变运算对象的底层const。对于将常量对象转换成非常量对象的行为，称其为"去掉const性质"，只有const_cast能改变表达式的常量属性，使用其他形式的命名强制类型转换改变表达式的常量属性都将引发编译器错误。
+```C++
+const char* cp;
+char* p=const_cast<char*>(pc);
+```
+  reinterpret_cast，通常为运算对象的位模式提供较低层次上的重新解释。使用reinterpret_cast是非常危险的，用pc初始化str的例子很好地证明了这一点。
+```C++
+int* ip;
+char* pc=reinterpret_cast<char*>(ip); //我们必须牢记oc所指的真实对象是一个int而非字符，如果把pc当成普通的字符指针使用就可能在运行时发生错误
+string str(pc); //类型转变了，但编译器没有给出任何警告或者错误的提示信息
+```
+  与命名的强制类型转换相比，旧式的强制类型转换从表现形式上来说不那么清晰明了，容易被看漏，所以一旦转换过程中出现问题，追踪起来也更加困难。
