--- a/C++ primer/05.md
+++ b/C++ primer/05.md
@@ -1,2 +1,117 @@
 # 第五章
- 
+  逗号表达式使用在循环中的语句。
+```C++
+while (val <= 10)
+  sum += val, ++val;
+```
+  C++规定else与离它最近的尚未匹配的if匹配，从而消除了程序的二义性。
+  
+  switch,如果某个case标签匹配成功，将从该标签考试往后顺序执行所有case分支，除非程序显式地中断了这一过程，否则知道sitch的结尾处才会停下来。
+```C++
+unsigned a=0,e=0,i=0,o=0,u=0;
+char ch;
+while(cin>>ch){
+  switch(ch){
+      case 'a':
+          ++a;
+          break;
+  }
+  ...
+}
+unsigned cnt=0;
+char ch;
+while(cin>>ch){
+  switch(ch){
+      case 'a':
+      case 'e':
+      case 'i':
+      case 'o':
+      case 'u':
+          ++cnt; //出现了a,e,i,o,u任意一个都会将vowelCnt的值加1
+          break;
+  }
+}
+```
+  switch内部变量定义，如果在某处一个带有初值的变量位于作用域之外，在另一处该变量位于作用域之内，则从前一处跳转到后一处的行为是非法行为。
+```C++
+case true:{
+  string file_name=get_file_name();
+}
+  break;
+case falde:
+  if(file_name.empty()) //error，file_name不再作用域之内
+```
+  case标签必须是整形常量表达式。
+```C++
+unsigned ival=512,jval=1024,kval=4096; //error,应改为const unsigned ival=512, jval=1024, kval=4096;
+unsigned bufsize;
+unsigned swt=get_bufCnt();
+switch(swt){
+  case ival:
+    bufsize=ival*sizeof(int);
+    break;
+  case jval:
+    bufsize=jval*sizeof(int);
+    break;
+  case kval:
+    bufsize = kval * sizeof(int);
+    break;
+}
+```
+  当不确定到底要迭代多少次时，使用while循环比较合适，比如读取输入的内容就是如此。
+```C++
+int main(){ //统计相邻最大个数
+  string pre_word,word,max_repeat_word;
+  int repeat_times=0,max_repeat_times=0;
+  while(cin>>word){
+    if(word==pre_word){
+      ++repeat_times;
+    }else{
+      repeat_times=1;
+      pre_word=word;
+    }
+    if(max_repeat_times<repeat_times){
+      max_repeat_times = repeat_times;
+      max_repeat_word = pre_word;
+    }
+  }
+}
+```
+  范围for语句如果需要对序列中的元素执行写操作，循环变量必须声明成引用类型。
+  
+  do while语句和while语句非常相似，唯一的区别时，do while语句先执行循环体后检查条件，不管条件的值如何，我们都至少执行一次循环。
+```C++
+do{
+  statement;
+}while(condition);
+```
+  break语句负责终止离它最近的while，do while，for或switch语句，并从这些语句之后的第一条语句开始继续执行。
+  
+  continue语句只能出现在for，while和do while循环的内部，或者嵌套在此类循环里的语句或块内部，和break语句类似的是，出现在嵌套循环中的continue语句也仅作用于离它最近的循环，和break不同的是，只有当switch语句嵌套在迭代语句内部时，才能在switch里使用continue。
+  
+  不要在程序中使用goto语句，因为它使得程序既难理解又难修改。
+  
+  异常处理包括，throw表达式，异常检测部分使用throw表达式来表示它遇到了无法处理的问题/try语句块，异常处理部分使用try语句块处理异常，try语句块以关键字try开始，并以一个或多个catch子句结束，try语句块中代码抛出的异常通常会被某个catch子句处理，catch子句处理异常。
+```C++
+int main(){
+  int a,b;
+  while(cin>>a>>b){
+    try{
+      if(b==0) 
+        throw runtime_error("divisor is 0");
+      cout<<static_cast<double>(a)/b<<endl;
+      cout<<"Input two integers:";
+    }
+    catch(runtime_error err){
+      cout<<err.what();
+      cout<<"\nTry Again? Enter y or n:"<<endl;
+      char c;
+      cin>>c;
+      if(!cin || c=='n')
+        break;
+      else
+        cout<<"Input two integers:";
+    }
+  }
+  return 0;
+}
