--- a/C++ primer/05.md
+++ b/C++ primer/05.md
@@ -103,7 +103,7 @@ int main(){
       cout<<"Input two integers:";
     }
     catch(runtime_error err){
-      cout<<err.what();
+      cout<<err.what(); //runtime_error的what成员返回的是初始化一个具体对象时所用的string对象副本
       cout<<"\nTry Again? Enter y or n:"<<endl;
       char c;
       cin>>c;
