--- a/C++ primer/01.md
+++ b/C++ primer/01.md
@@ -1,4 +1,4 @@
-# 第1章
+# 第一章
   main函数的返回类型必须为int，即整数类型。int类型是一种内置类型，即语言本身定义的类型。  
     
   iostream库包含两个基础类型istream和ostream，分别表示输入流和输出流，一个流就是一个字符序列，是从IO设备读入或写入IO设备的。  
