--- a/C++ primer/02.md
+++ b/C++ primer/02.md
@@ -1,4 +1,4 @@
-# 第2章
+# 第二章
   计算机以比特序列存储数据，每个比特非0即1。大多数计算机以2的整数次幂个比特作为块来处理内存，可寻址的最小内存块称为“字“，存储的基本单位称为”字“，通常由几个字节组成。
     
   大多数计算机将内存中的每个字节与一个数字(被称为地址)关联起来，在一个字节为8比特、字为32比特的机器上，我们可能看到一个字的内存区域如下，其中左侧为字节的地址，右侧是字节中8比特的内容。
