--- a/C++ primer/06.md
+++ b/C++ primer/06.md
@@ -1,1 +1,77 @@
 # 第六章
+  函数的返回类型不能是数组类型或函数类型，但可以是指向数组或函数的指针。
+  
+  我们把只存在于块执行期间的对象称为自动对象，当块执行结束后，块中创建的自动对象的值就变成为定义的，形参是一种自动对象，函数开始时为形参申请存储空间，因为形参定义在函数体作用域之内，所以一旦函数终止，形参也就被销毁。
+  
+  局部变量定义成static类型，局部静态对象在程序的执行路径第一次经过对象定义语句时初始化，并且直到程序终止才销毁，在此期间即使对象所在的函数结束执行也不会对它有影响。
+```C++
+int count(){
+  static int cnt=0; //这个就是局部静态对象，这句话只在第一次调用时执行，而且调用结束后，这个值仍然有效
+  return ++cnt;
+}
+int main(){
+  for(int i=0;i<10;++i){
+    cout<<count()<<endl;
+  }
+  return 0;
+}
+```
+  如果局部静态变量没有显示的初始值，它将执行值初始化，内置类型的局部静态变量初始化为0。
+  
+  分离式编译例子
+```C++
+  factMain.cc
+#include "Chapter6.h"
+#include <iostream>
+int main(){
+  std::cout<<"5! is"<<fact(5)<<std::endl;
+  std::cout<<func()<<std::endl;
+  std::cout<<abs(-9.78)<<std::endl;
+}
+  Chapter6.h
+int fact(int val);
+int func();
+template<typename T> 
+T abs(T i){
+  return i>=0?i:-i;
+}
+  fact.cc
+#include "Chapter6.h"
+#include <iostream>
+int fact(int val){
+  if (val==0 || val==1)
+      return 1;
+  else
+      return val*fact(val-1);
+}
+int func(){
+  int n,ret=1;
+  std::cout<<"input a number:";
+  std::cin>>n;
+  while(n>1) 
+    ret*=n--;
+  return ret;
+}
+//自己总结，主.cpp main引用.h声明，.cpp具体实现引用它的.h声明
+```
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
