--- a/C++ primer/06.md
+++ b/C++ primer/06.md
@@ -54,24 +54,106 @@ int func(){
 }
 //自己总结，主.cpp main引用.h声明，.cpp具体实现引用它的.h声明
 ```
+  形参的类型决定了形参和实参交互的方式，如果形参实引用类型，它将绑定到对应的实参上，否则，将实参的值拷贝后赋给形参。
   
+  C++语言中，建议使用引用类型的形参代替指针。
   
+  拷贝大的类类型对象或者容器比较低效，甚至有的类类型(包括IO类型在内)根本就不支持拷贝操作时，函数只能通过引用形参访问该类型的对象。如果函数无需改变引用形参的值，最好将其声明为常量引用。
   
+  能够使用引用参数返回额外的信息，能够同时返回多个值。
+```C++
+int fact(int &i,int &cnt){ //追加乘以了几次
+  int sum=1;
+  while(i>1){
+      sum*=i--;
+      ++cnt;
+  }
+  return sum;
+}
+int main(){
+  int a=5,b=0;
+  cout<<fact(a,b)<<endl;
+  cout<<b<<endl;
+  return 0;
+}
+```
+  const int &r2=14正确，属于常量引用，int &r4=42不正确，不能使用字面值初始化一个非常量引用。
   
+  把函数不会改变的形参定义成普通的引用是一种比较常见的错误，这么做带给函数的调用者一种误导，即函数可以修改它的实参的值。此外，使用引用而非常量引用也会极大地限制函数所能接受的实参类型，*我们不能把const对象，字面值或者需要类型转换的对象传递给普通的引用形参。*
+```C++
+string& string::size_type find_char(string& s,char c,string::size_type& occurs);
+find_char("Hello World",'o','ctr') //error
+```
+  int main(int argc,char* argv[]){}第二个参数是元素是指向C风格字符串的指针，第一个参数是表示数组中字符串的数量，当使用argv中的实参时，一定要记得可选的实参从argv[1]开始，argv[0]保存程序的名字，而非用户输入，例如argv[0]="prog",argv[1]="-d"
   
+  如果函数的实参数量未知但是全部实参的类型都相同，我们可以使用initializer_list类型的形参，initializer_list是一种标准库类型，用于表示某种特定的值的数组，和vector不一样的是，initializer_list对象中元素永远是常量值，我们无法改变initializer_list对象中的元素的值。
   
+  不要返回局部对象的引用或指针
+```C++
+const string &f(){
+  string ret;
+  if(!ret.empty()){
+      return ret; //error,因为ret是在被调用函数中定义的，当return之后ret都被销毁了
+  }
+  else{
+      return "empty"; //"empty"只是个在被调函数中临时创建的对象，return之后也是要销毁的
+  }
+}
+```
+  由于数组不能被拷贝，所以函数不能返回数组，不过函数可以返回数组的指针或引用，要想定义一个返回数组的指针或引用的函数比较繁琐，但是有一些方法可以简化这一任务，使用类型别名
+```C++
+typedef int arrT[10]; //arrT是一个类型别名，表示的类型是含有10个整数的数组
+== using arrT=int[10];
+arrT* func(int i); //func返回一个指向含有10个整数的数组的指针
+```
+  对于重载函数来说，它们应该在形参数量或形参类型上有所不用，不允许两个函数除了返回类型外其他所有的要素都相同。
   
+  顶层const不影响传入函数的对象，一个拥有顶层const的形参无法和另一个没有顶层const的形参区分开来。
+```C++
+Record lookup(Phone);
+Record lookup(const Phone); //same
+Record lookup(Phone*);
+Record lookup(Phone* const); //same
+```
+  底层const，如果形参是某种类型的指针或引用，则通过区分其指向的是常量对象还是非常量对象可以实现函数重载。
+```C++
+Record lookup(Account&);
+Record lookup(const Account&);
+Record lookup(Account*);
+Record lookup(const Account*);
+```
+  const_cast在重载中常见的用法：
+```C++
+const string &shortStr(const string &s1,const string &s2){
+   return s1.size()<=s2.size()?s1:s2;
+}
+//当接收两个非常量时，我们希望返回的也是非常量，而它还是返回常量引用，所以我们要用const_cast写一个重载的函数：
+string &shortStr(string &s1,string &s2){
+  auto &r = shortStr(const_cast<const string>(s1),const_cast<const string>(s2)); //强制转换s1和s2为const，再调用上面那个shortStr函数
+  return const_cast<string&>(r); //去掉常量，返回普通引用
+}
+```
+  默认实参需要注意的是一旦某个形参被赋予了默认值，它后面的所有形参都必须有默认值。
   
+  调用函数的缺点，一般比求等价表达式的值要慢一些，在大多数机器上，一次函数调用其实包含着一系列工作：调用前要先保存寄存器，并在返回时恢复；可能需要拷贝实参；程序转向一个新的位置继续执行。
   
+  内联函数可避免函数调用的开销，内联机制用于优化规模较小，流程直接，频繁调用的函数。
   
+  constexpr函数是指能用于常量表达式的函数，规定函数的返回类型及所有形参的类型必须是字面值类型，而且函数体中必须有且仅有一条return语句，constexpr函数直接被隐式地指定为内联函数。
   
+  constexpr函数体内也可以包含其他语句，只要这些语句在运行时不执行任何操作，允许constexpr函数的返回值并非一个常量，如果arg是常量表达式，则scale(arg)也是常量表达式。
   
+  assert预处理宏，宏定义在cassert头文件中，预处理名字由预处理器而非编译器管理，因此我们可以直接使用预处理名字而无需提供using声明。
   
-  
-  
-  
-  
-  
-  
-  
-  
+  函数指针指向的是函数而非对象，和其他指针一样，函数指针指向某种特定类型，函数的类型由它的返回类型和形参类型共同决定，与函数名无关。
+```C++
+bool lengthCompare(const string &, const string &); //比较两个string对象的长度
+//根据函数类型的定义，该函数的类型是bool(const string &, const string &)。要想声明一个可以指向该函数的指针，只需用指针替换函数名即可：
+bool (*pf)(const string &, const string &); ////pf指向一个函数，该函数的形参是两个const string的引用，返回值是bool类型
+bool b1=pf("Hello","goodbye"); //调用
+```
+  当我们把函数名作为一个值使用时，该函数自动地转换成指针，例如：
+```C++
+pf=lengthCompare; //pf指向名为lengthCompare的函数
+pf=&lengthCompare; //等价的赋值语句：取地址符是可选的
+```
