--- a/C++ primer/08.md
+++ b/C++ primer/08.md
@@ -1,13 +1,15 @@
 # 第八章
-    iostream定义了用于读写流的基本类型(istream：从流读取数据，ostream从流写入数据。
-    fstream定义了用于命名文件的基本类型(ifstream：从文件读取数据，ofstream：从文件写入数据。
+  iostream定义了用于读写流的基本类型(istream：从流读取数据，ostream从流写入数据。
+  
+  fstream定义了用于命名文件的基本类型(ifstream：从文件读取数据，ofstream：从文件写入数据。
+  
   sstream定义了用于读写内存string对象的基本类型(istringstream：从string读取数据，ostringstream：从string写入数据。
   
-    IO对象无拷贝和赋值，由于不能拷贝IO对象，因此我们也不能将形参或返回类型设置为流类型，进行IO操作的函数通常以引用方式传递和返回流，读写一个IO对象会改变其状态，因此传递和返回的引用不能是const。
+  IO对象无拷贝和赋值，由于不能拷贝IO对象，因此我们也不能将形参或返回类型设置为流类型，进行IO操作的函数通常以引用方式传递和返回流，读写一个IO对象会改变其状态，因此传递和返回的引用不能是const。
   
   确定一个流对象的状态的最简单的方法是将它当作一个条件来使用，使用while(cin>>word)。
   
-  每个输出流都管理一个缓存区，用来保存程序读写的数据。导致缓冲区刷新的几点原因：
+  * 每个输出流都管理一个缓存区，用来保存程序读写的数据。导致缓冲区刷新的几点原因：
     * 程序正常结束，作为main函数的return操作的一部分，缓冲刷新被执行
     * 缓冲区满了，所以要刷新缓冲，以便后来的数据能继续写入缓冲
     * 使用例如endl的操作符来显式刷新缓冲区
@@ -75,7 +77,7 @@ while(getline(cin,line)){
 
 //我们不希望输出号码有错误的人，所以啊，对于每一个人来说，我们要验证他所有的号码都有效才可以输出，于是，很自然的，我们就想到先把输出内容写入到一个内存ostringstream中
 for(const auto &entry:people){ //遍历
-    ostingstream goodNums,badNums; //每步循环创建对象
+    ostringstream goodNums,badNums; //每步循环创建对象
     for(const auto &nums:entry.phones){
         if(!valid(nums)){ //如果号码不合法（我们假定有这个valid函数）
             badNums<<" "<<nums;
@@ -86,10 +88,77 @@ for(const auto &entry:people){ //遍历
     }
     //os.str()是string流特有操作，返回os所保存的string的拷贝
     if(badNums.str().empty()){ //全对，没有错误号码
-        os<<entry.name<<" "<<goodNums.str()<<endl; 
+        cout<<entry.name<<" "<<goodNums.str()<<endl; 
     }
     else{
         cerr<<"input error"<<entry.name<<badNums.str()<<endl;
     }
 }
-``` 
+```
+```C++
+//complete code
+#include <iostream>
+#include <sstream>
+#include <fstream>
+#include <string>
+#include <vector>
+
+using std::vector;
+using std::string;
+using std::cin;
+using std::istringstream;
+using std::ostringstream;
+using std::ifstream;
+using std::cerr;
+using std::cout;
+using std::endl;
+using std::isdigit;
+
+struct PersonInfo{
+    string name;
+    vector<string> phones;
+};
+
+bool valid(const string& str){
+    return isdigit(str[0]);
+}
+
+string format(const string& str){
+    return str.substr(0, 3) + "-" + str.substr(3, 3) + "-" + str.substr(6); //str.substr(a,b)从a开始一共b个单位长度
+}
+
+int main(){
+    ifstream ifs("../data/phonenumbers.txt");
+    if (!ifs){
+        cerr<<"no phone numbers?"<<endl;
+        return -1;
+    }
+
+    string line, word;
+    vector<PersonInfo> people;
+    istringstream record;
+    while (getline(ifs, line)) {
+        PersonInfo info;
+        record.clear();
+        record.str(line); //string流特有的操作，strm.str(s)将string s拷贝到strm中
+        record>>info.name;
+        while(record>>word) 
+            info.phones.push_back(word);
+        people.push_back(info);
+    }
+
+    for(const auto& entry:people) {
+        ostringstream formatted,badNums;
+        for(const auto& nums:entry.phones)
+            if (!valid(nums))
+                badNums<<" "<<nums;
+            else
+                formatted<<" "<<format(nums);
+        if(badNums.str().empty())
+            cout<<entry.name<<" "<<formatted.str()<<endl;
+        else
+            cerr<<"input error:"<<entry.name<<"invalid number(s)"<<badNums.str()<<endl;
+    }
+    return 0;
+}
+```
