--- a/C++ primer/08.md
+++ b/C++ primer/08.md
@@ -1,20 +1,18 @@
 # 第八章
-  iostream定义了用于读写流的基本类型(istream：从流读取数据，ostream从流写入数据。
-  
-  fstream定义了用于命名文件的基本类型(ifstream：从文件读取数据，ofstream：从文件写入数据。
-  
-  sstream定义了用于读写内存string对象的基本类型(istringstream：从string读取数据，ostringstream：从string写入数据。
+    iostream定义了用于读写流的基本类型(istream：从流读取数据，ostream从流写入数据。
+    fstream定义了用于命名文件的基本类型(ifstream：从文件读取数据，ofstream：从文件写入数据。
+    sstream定义了用于读写内存string对象的基本类型(istringstream：从string读取数据，ostringstream：从string写入数据。
   
   IO对象无拷贝和赋值，由于不能拷贝IO对象，因此我们也不能将形参或返回类型设置为流类型，进行IO操作的函数通常以引用方式传递和返回流，读写一个IO对象会改变其状态，因此传递和返回的引用不能是const。
   
   确定一个流对象的状态的最简单的方法是将它当作一个条件来使用，使用while(cin>>word)。
   
-* 每个输出流都管理一个缓存区，用来保存程序读写的数据。导致缓冲区刷新的几点原因：
-  * 程序正常结束，作为main函数的return操作的一部分，缓冲刷新被执行
-  * 缓冲区满了，所以要刷新缓冲，以便后来的数据能继续写入缓冲
-  * 使用例如endl的操作符来显式刷新缓冲区
-  * 在每个输出操作后，我们可以用unitbuf设置流的内部状态来清空缓冲区。对于cerr来说，unitbuf是默认设置的，因此写到cerr的内容都是立即刷新的
-  * 一个输出流关联到另一个流时，当读写被关联的流时，关联到的流的缓冲区自动刷新。例如，默认情况下，cin和cerr都关联到cout，因此读cin或者写cerr都会导致cout的缓冲区被刷新
+    每个输出流都管理一个缓存区，用来保存程序读写的数据。导致缓冲区刷新的几点原因：
+        程序正常结束，作为main函数的return操作的一部分，缓冲刷新被执行
+        缓冲区满了，所以要刷新缓冲，以便后来的数据能继续写入缓冲
+        使用例如endl的操作符来显式刷新缓冲区
+        在每个输出操作后，我们可以用unitbuf设置流的内部状态来清空缓冲区。对于cerr来说，unitbuf是默认设置的，因此写到cerr的内容都是立即刷新的
+        一个输出流关联到另一个流时，当读写被关联的流时，关联到的流的缓冲区自动刷新。例如，默认情况下，cin和cerr都关联到cout，因此读cin或者写cerr都会导致cout的缓冲区被刷新
 
 如果程序异常终止，输出缓冲区是不会被刷新的，当一个程序崩溃后，它所输出的数据很可能停留在输出缓冲区中等待打印。
   
@@ -151,7 +149,7 @@ int main(){
         ostringstream formatted,badNums;
         for(const auto& nums:entry.phones)
             if (!valid(nums))
-                badNums<<" "<<nums;
+                badNums<<" "<<nums; //并不能真正打印到显示器上，还是通过cout
             else
                 formatted<<" "<<format(nums);
         if(badNums.str().empty())
